[package]
name = "brighter"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Control and fetch brightness information for backlight and led devices"
repository = "https://github.com/ValdezFOmar/brighter"
readme = "README.md"
include = ["/src", "README.md", "LICENSE"]

[dependencies]
anstream = "0.6.21"
anstyle = "1.0.13"
clap = { version = "4.5.48", features = ["derive"] }
colorchoice-clap = "1.0.7"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_float_eq = "1.1.4"
